{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 196,
  "lineage": "0ae29814-3379-f54e-8bfd-fa110c545bfa",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc-Quant-Tokyo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:464542629384:vpc/vpc-ec184a8b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-de7728b6",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ba2f57dd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-ec184a8b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-aa1bb3cc",
            "owner_id": "464542629384",
            "tags": {
              "Name": "Quant-Tokyo",
              "Product": "Quant"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:464542629384:security-group/sg-0ec70905923f45050",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0ec70905923f45050",
            "ingress": [],
            "name": "kubeproxy-test-cluster-20240829062534341500000002",
            "name_prefix": "kubeproxy-test-cluster-",
            "owner_id": "464542629384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubeproxy-test-cluster"
            },
            "tags_all": {
              "Environment": "kubeproxy-test",
              "ManagedBy": "Terraform",
              "Name": "kubeproxy-test-cluster",
              "Product": "Quant"
            },
            "timeouts": null,
            "vpc_id": "vpc-ec184a8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc-Quant-Tokyo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:464542629384:security-group/sg-02bde0e130bbda208",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-02bde0e130bbda208",
            "ingress": [],
            "name": "kubeproxy-test-node-20240829062534341700000004",
            "name_prefix": "kubeproxy-test-node-",
            "owner_id": "464542629384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubeproxy-test-node",
              "kubernetes.io/cluster/kubeproxy-test": "owned"
            },
            "tags_all": {
              "Environment": "kubeproxy-test",
              "ManagedBy": "Terraform",
              "Name": "kubeproxy-test-node",
              "Product": "Quant",
              "kubernetes.io/cluster/kubeproxy-test": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-ec184a8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc-Quant-Tokyo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1131785991",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ec70905923f45050",
            "security_group_rule_id": "sgr-0c19291039e152650",
            "self": false,
            "source_security_group_id": "sg-02bde0e130bbda208",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc-Quant-Tokyo",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-662089606",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02bde0e130bbda208",
            "security_group_rule_id": "sgr-0771898993ac49cb6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc-Quant-Tokyo",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_NodePorts",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "58.33.91.128/29",
              "58.246.122.30/32",
              "210.209.77.136/29",
              "218.255.251.130/32",
              "165.21.105.184/30"
            ],
            "description": "NodePorts from Office",
            "from_port": 30000,
            "id": "sgrule-2117493576",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02bde0e130bbda208",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc-Quant-Tokyo",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "All from trusted",
            "from_port": 0,
            "id": "sgrule-1567568489",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02bde0e130bbda208",
            "security_group_rule_id": "sgr-005b601559eaaf969",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc-Quant-Tokyo",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1903365119",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02bde0e130bbda208",
            "security_group_rule_id": "sgr-0717bba933107997b",
            "self": false,
            "source_security_group_id": "sg-0ec70905923f45050",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc-Quant-Tokyo",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-765416681",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02bde0e130bbda208",
            "security_group_rule_id": "sgr-01e7301c4211ca76d",
            "self": false,
            "source_security_group_id": "sg-0ec70905923f45050",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc-Quant-Tokyo",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3839701887",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02bde0e130bbda208",
            "security_group_rule_id": "sgr-08e9bd4f84a0bdc0c",
            "self": false,
            "source_security_group_id": "sg-0ec70905923f45050",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc-Quant-Tokyo",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4152430430",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02bde0e130bbda208",
            "security_group_rule_id": "sgr-0e103fc93c7ba6700",
            "self": false,
            "source_security_group_id": "sg-0ec70905923f45050",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc-Quant-Tokyo",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2468363413",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02bde0e130bbda208",
            "security_group_rule_id": "sgr-068b82c70ae6631fd",
            "self": false,
            "source_security_group_id": "sg-0ec70905923f45050",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc-Quant-Tokyo",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1907697209",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02bde0e130bbda208",
            "security_group_rule_id": "sgr-0b2cb1def24311e86",
            "self": false,
            "source_security_group_id": "sg-0ec70905923f45050",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc-Quant-Tokyo",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3415984380",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02bde0e130bbda208",
            "security_group_rule_id": "sgr-01bb626b8038df974",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc-Quant-Tokyo",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1066676202",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02bde0e130bbda208",
            "security_group_rule_id": "sgr-03a8dce00e398c482",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc-Quant-Tokyo",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2613808133",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-02bde0e130bbda208",
            "security_group_rule_id": "sgr-0ba7f0f52a36f6bbb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc-Quant-Tokyo",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}